--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
     "gsap": "^3.11.5",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.258.0",
     "mdb-react-ui-kit": "^6.0.0",
+    "node-fetch": "^3.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-carousel": "^4.1.1",
@@ -28,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-easy-swipe": "^0.0.23",
     "react-elastic-carousel": "^0.11.5",
+    "react-geocode": "^0.2.3",
     "react-icons": "^4.8.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.0.5",
